--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">MarvelApp</string>
-    <string name="no_response">No response. Make sure you have a good Internet connection</string>
+    <string name="something_went_wrong">Something went wrong. Make sure you have a good Internet connection</string>
     <string name="bad_request">Sorry. Bad request</string>
     <string name="data_not_found">Data not found</string>
     <string name="no_information">No information</string>
