--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,8 @@
 <resources>
     <string name="app_name">MarvelApp</string>
-    <string name="something_went_wrong">Something went wrong. Make sure you have a good Internet connection</string>
-    <string name="bad_request">Sorry. Bad request</string>
+    <string name="invalid_credentials">Invalid credentials. Check your API keys</string>
     <string name="data_not_found">Data not found</string>
-    <string name="no_information">No information</string>
+    <string name="something_went_wrong">Something went wrong. Make sure you have a good Internet connection</string>
     <string name="empty_search_query">Search query is empty</string>
 
     <!-- Details fragment -->
